# Studio-Pipeline

./: .gitignore  Makefile  README.md  build.sh  build_ai.sh  react-reference.txt  requirements-ai.txt  requirements.txt  start_servers.sh  start_servers_ai.sh  start_servers_standard.sh  stop_servers.sh  stop_servers_ai.sh  stop_servers_standard.sh
backend/: add_analytics_table.py  add_external_export_path.py  add_llm_stats.py  backfill_duration.py  configure_ftp.py  constants.py  database.py  dependencies.py  diagnose_queue.py  exceptions.py  export_analytics_excel.py  init_db.py  main.py  migrate_add_atem_fields.py  migrate_add_audience_speaker_fields.py  migrate_add_campus_field.py  migrate_add_deletion_tracking.py  migrate_add_directory_structure.py  migrate_add_duration_field.py  migrate_add_mp3_temp_path.py  migrate_add_onedrive_fields.py  migrate_add_path_final_index.py  migrate_add_pause_fields.py  migrate_add_processing_stages.py  migrate_add_queue_order.py  migrate_add_recovery_fields.py  migrate_add_waveform_fields.py  models.py  models_analytics.py  models_analytics_stubs.py  pyproject.toml  remove_language_column.py  schemas.py  update_jobs_constraint.py
backend/api/: analytics.py  dev_queue.py  discovery.py  files.py  jobs.py  sessions.py  settings.py  thumbnails.py  videos.py  waveforms.py  workers.py
backend/config/: ai_config.py
backend/domain/: __init__.py
backend/dtos/: __init__.py
backend/repositories/: __init__.py  base_repository.py  file_repository.py  file_specifications.py  job_repository.py  session_repository.py  specifications.py
(+161 files in other folders)
